assets/main.scss
/* ... */
@media (min-width: 800px) {
    pre code:not(.has-jax) {
        font-size: .875rem;
    }
}

/* ========================================================================= */
/* TABLE STYLING                                                             */
/* ========================================================================= */

.table-wrapper {
    overflow-x: auto;
}

/* Center tables inside page content */
div.content table {
    margin-left: auto; 
    margin-right: auto;
    font-size: 1.1rem;

    /* The right-column has break-word set to stop long strings/URLs from going off the side
    of the page. We need to however set word-break back to normal here otherwise column sizes
    look weird */
    word-break: normal;

    border-collapse: collapse;
}

div.content {

    th {
        background-color: var(--main-color);
        color: white;
        font-weight: normal;
        padding: 10px;
    }

    td, th {
        /* O.k. size on mobile */
        font-size: 2.5vw;
        border: 1px solid rgb(210, 210, 210);
    }
    @media (min-width: 800px) {
        /* Make tabular data a little smaller than standard paragraphs */
        td, th, td ul li, td p {
        font-size: 0.95rem;
        line-height: 1.5;
        }
    }

    td {
        ul {
            // Make padding tiny for lists in tables so we can fit them into cells without taking up too
            // much of the total page width
            padding-inline-start: 8px; 
        }
    }
}

div.content tr:nth-of-type(even) {
    background: var(--main-color-light);
}

div.content tr:nth-of-type(odd) {
    // background:#EFEFEF;
}

div.content td {
    // 2021-07-08: Decided left-aligned text looked better than centered text, so commented the below line out
    // text-align: center; /* This messes up list identifiers (e.g. bullet points), so we fix this below */
    padding: 10px;
}

div.content td ul {
    display: inline-block; /* This makes list identifiers look good within table cells when contents are centered */
}

div.content td li {
    text-align: left; /* Left aligns text in lists */
}

/* OK, WARNING AND ERROR ROWS IN A TABLE */

div.content tr.ok {
    background-color: #d7fcd3;
}

div.content tr.warning {
    background-color: #f5f5d3;
}

div.content tr.error {
    background-color: #ffe3e3;
}

table.code th, table.code td {
  font-family: monospace;
}



/* ========================================================================= */
/* ASCIIDOC SPECIFIC                                                         */
/* ========================================================================= */

/* ========================================================================= */
/* ASCIIDOC SPECIFIC                                                         */
/* ========================================================================= */

/* ========================================================================= */
/* ASCIIDOC SPECIFIC                                                         */
/* ========================================================================= */

/* AsciiDoc wraps all text within list elements in a p element, let's get rid of
margin block start and end values (set by user agent stylesheet)
so the list elements do not have too much vertical padding between items. */
ul li p {
    /* line-height: 1.0; */
    margin-block-start: 0;
    margin-block-end: 0;
}

/* ========================================================================= */
/* IMAGES                                                                    */
/* ========================================================================= */

.imageblock {

    // Add gaps between image blocks and other content
    margin-top: 1em;
    margin-bottom: 1em;

    /* Make image caption text a little smaller than the main paragraph text and make
    it italic */
    .title {
        font-size: 0.8em;
        font-style: italic;
        text-align: center; /* Center text (with centered image) */
    }

    /* This centers the image */
    .content {
        display: flex;
        justify-content: center;
    }

    img {
        max-width: 100%; // Even if in the AsciiDoc file the image is specified with width=<large number>, make sure it is not wider than the parent content div
    }
}

// imagerow is a custom class we apply to blocks in where we want to show images
// in a row across the page
.imagerow {
    display: flex;
    justify-content: center;
    .content {
        display: flex;
    }
}

/* Disable automatic heading numbering because AsciiDoc will
do this for us */
.content .sect1 h2::before {
    counter-reset: unset;
    content: none;
}

.content .sect1 h3::before {
    counter-reset: unset;
    content: none;
}

.content .sect1 h4::before {
    counter-reset: unset;
    content: none;
}

// AsciiDoc admonitions (e.g. TIP:, WARNING:, ...)
.admonitionblock {

    // Add gaps between admonition blocks and other content
    margin-top: 1em;
    margin-bottom: 1em;

    &.tip {
        background-color: rgb(230, 255, 230);
    }

    &.note {
        background-color: rgb(252, 252, 237);
    }

    &.warning {
        background-color: rgb(255, 230, 230);
    }

    table tbody tr {
        background-color: transparent !important;
    }

    td {
        line-height: 1.7 !important;
    }
}

// text-center is added by AsciiDoc when [.text-center] is added before a paragraph
.text-center {
    text-align: center;
}
/* ... */

